# hrDemoWebApp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  update-docs-for-iga-endpoints.patch
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_locations.py  0003_add_oidc_providers.py  0004_add_app_branding.py  0005_add_audit_events.py  0006_add_app_config.py  0007_add_user_role.py  0008_add_api_key_scopes.py  0009_add_user_theme.py  0010_add_mcp_gateway_tokens.py
app/: __init__.py  config.py  db.py  logging_config.py  main.py
app/api/: main.py
app/api/v1/: _helpers.py  api_keys.py  backup.py  countries.py  departments.py  employees.py  employment_statuses.py  job_titles.py  locations.py  oauth_token.py  (+5 more)
app/models/: __init__.py  _mixins.py  api_key.py  app_branding.py  app_config.py  app_user.py  audit_event.py  auth_provider.py  country.py  department.py  employee.py  employment_status.py  job_title.py  location.py  mcp_gateway_token.py  oauth_client.py  state_province.py  user_identity.py
app/schemas/: auth.py  employee.py  lookups.py  reports.py  users.py
app/scripts/: reset_admin_password.py
app/services/: _seed_countries.py  _seed_states.py  audit.py  auth.py  backup.py  branding.py  employee_validation.py  jwt_tokens.py  mcp_gateway_tokens.py  mcp_token.py  migrations.py  oidc.py  passwords.py  scopes.py  secret_box.py  seed_data.py  system_config.py  tokens.py
app/static/: app.css  app.js
app/templates/: _macros.html  base.html  login.html
app/ui/: audit_routes.py  auth_routes.py  dependencies.py  employee_routes.py  flash.py  lookup_routes.py  oidc_routes.py  settings_routes.py  templating.py
data/: INITIAL_CREDENTIALS.txt  hrsot.db  hrsot.db-shm  hrsot.db-wal  session_secret
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MCP.md  REQUIREMENTS.md  SAVIYNT_INTEGRATION.md  SCHEMA.md  SECURITY.md  UI.md
docs/deploy_to_AWS_fargate/: .hr-demo-state.hr-demo-prime  README.md  deploy.sh  fix-image.sh  manage.sh  restore-state.sh  setup.sh  teardown.sh  update.sh
mcp_server/: Dockerfile  __init__.py  __main__.py  config.py  gateway_auth.py  requirements.txt  server.py
tests/: conftest.py  test_api_key_scopes.py  test_api_keys.py  test_audit.py  test_backup.py  test_employees.py  test_health.py  test_lookups.py  test_mcp_tokens.py  test_models.py  test_oauth.py  test_principal_auth.py  test_reports.py  test_roles.py  test_scopes.py  test_seed_data.py  test_session_auth.py  test_ui.py  test_users_api.py
(+28 files in other folders)
